<resources>
    <string name="app_name">Trata</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="not_logged">NOT LOGGED IN</string>
    <string name="logged">LOGGED IN</string>
    <string name="sign_out_text">SIGN OUT</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="server_client_id">534786616869-k8kplmfdh0gfrbjlc30sts4fnmr66bo9.apps.googleusercontent.com</string>
    <string name="message">THIS FIELD CANNOT BE EMPTY</string>
    <string name="no_phone">PLEASE ENTER MOBILE NO.</string>
    <string name="no_aadhar">PLEASE ENTER AADHAR NO.</string>
    <string name="no_location">PLEASE ENTER LOCATION</string>
    <string name="facebook_app_id">795149104216520</string>
    <string name="signup">Sign Up</string>
    <string name="head">Save Me</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_registered_email">Enter your registered email...</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_password_desc">By clicking RESET PASSWORD an email will be sent to your registered email address to reset the password</string>
    <string name="dbname">Security_app2.db</string>
    <string name="proceed">proceed</string>
    <string name="password_can_t_be_empty">password can\'t be empty</string>
    <string name="locality">Locality</string>
    <string name="change_password">change password ?</string>
    <string name="copy_right" translatable="false">© %1$d. All rights reserved Innovatiive Creators</string>
    <string name="version">Version 1.0.0</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>