<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_your_registered_email"
            android:ems="10"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_password"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/resetPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_desc"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>