<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical|fill_vertical"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="25dp"
                android:maxWidth="10dp"
                android:minWidth="10dp"
                app:srcCompat="@mipmap/ic_launcher_foreground" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:gravity="center"
                android:shadowColor="#A3050101"
                android:shadowRadius="25"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="#FFF8F8"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textlayout_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColorHint="#FFFFFF"
                app:counterEnabled="false"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/ed_cus"
                    android:ems="10"
                    android:hint="Full Name"
                    android:inputType="textPersonName"
                    android:maxLength="40"
                    android:paddingBottom="9dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="20dp"
                    android:paddingTop="9dp"
                    android:textColor="#ffffff"
                    android:textColorHighlight="#F8FA0707"
                    android:textColorHint="#ffffff"
                    android:textColorLink="#00F30707"
                    android:textCursorDrawable="@android:color/holo_red_dark"
                    android:textSize="22sp" />
            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:id="@+id/radiogrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_gender"
                    style="@android:style/Widget.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/ed_cus"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:paddingBottom="9dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="20dp"
                    android:paddingTop="9dp"
                    android:text="Gender"
                    android:textColor="#FFFFFF"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="5dp"
                    android:text="Male"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:paddingStart="5dp"
                    android:text="Female"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"/>

            </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textlayout_Dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColorHint="#FFFFFF"
                app:counterEnabled="false"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/ed_cus"
                    android:ems="10"
                    android:hint="DOB"
                    android:inputType="date"
                    android:paddingBottom="9dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="20dp"
                    android:paddingTop="9dp"
                    android:textColor="#ffffff"
                    android:textColorHighlight="#F8FA0707"
                    android:textColorHint="#ffffff"
                    android:textColorLink="#00F30707"
                    android:textCursorDrawable="@android:color/holo_red_dark"
                    android:textSize="22sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textlayout_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColorHint="#FFFFFF"
                app:counterEnabled="false"
                app:errorEnabled="true"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/ed_cus"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="9dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="20dp"
                    android:paddingTop="9dp"
                    android:textColor="#ffffff"
                    android:textColorHighlight="#F8FA0707"
                    android:textColorHint="#ffffff"
                    android:textColorLink="#00F30707"
                    android:textCursorDrawable="@android:color/holo_red_dark"
                    android:textSize="22sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textlayout_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ed_cus"
                    android:hint="@string/password"
                    android:paddingBottom="9dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="20dp"
                    android:paddingTop="9dp"
                    android:textColorHint="#FFFFFF"
                    android:textSize="22sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editcPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textlayout_CnfPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ed_cus"
                    android:hint="@string/confirm_password"
                    android:paddingBottom="9dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="20dp"
                    android:paddingTop="9dp"
                    android:textColorHint="#FFFFFF"
                    android:textSize="22sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_cus"
                android:paddingBottom="9dp"
                android:paddingTop="9dp"
                android:text="@string/submit"
                android:textColor="#000000"
                android:textColorHint="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />




        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>